# dude-duck-telegram

./: .env  .gitignore  Dockerfile  cert.pem  docker-compose.yml  key.pem  main.py  pyproject.toml  test.py
app/: api.py  db.py  handler.py  helpers.py  routers.py
app/core/: bot.py  cbdata.py  config.py  enums.py  errors.py  extensions.py  logging.py  webhook.py
app/handlers/: admin_close.py  auth.py  get_id.py  language.py  manage_users.py  request_verify.py  start.py  verify.py
app/handlers/menu/: __init__.py  accounting.py  main.py  orders.py  utils.py
app/handlers/order/: __init__.py  dialogue.py  insta.py  message.py
app/middlewares/: correlation.py  exception.py  permissions.py  time.py
app/services/api/: flows.py  models.py  schemas.py  service.py
app/services/auth/: bearers.py  models.py  service.py  views.py
app/services/channel/: flows.py  models.py  service.py  views.py
app/services/close/: flows.py  models.py  views.py
app/services/message/: flows.py  models.py  service.py  views.py
app/services/pull/: flows.py  models.py  service.py  views.py
app/services/render/: flows.py  models.py  service.py  views.py
app/services/response/: flows.py  models.py  service.py
app/services/search/: models.py  service.py
app/services/time/: service.py
app/services/users/: views.py
app/utils/: constants.py  helpers.py  templates.py
data/: DF-cd.json  DF.json  base.json  data-2.json  eta.json
src/: handler.py  helpers.py  routers.py
src/core/: bot.py  cbdata.py  config.py  db.py  enums.py  errors.py  extensions.py  logging.py  webhook.py
src/handlers/: admin_close.py  auth.py  get_id.py  manage_users.py  order_message.py  request_verify.py  start.py  verify.py
src/handlers/menu/: accounting.py  main.py  orders.py  states.py  utils.py
src/handlers/order/: __init__.py  insta.py  message.py
src/middlewares/: db.py  exception.py  permissions.py
src/models/: message.py  user.py
src/schemas/: __init__.py  api.py  auth.py  close.py  response.py
src/services/api/: flows.py  models.py  schemas.py  service.py
src/services/auth/: bearers.py  models.py  service.py  views.py
src/services/close/: flows.py  models.py  views.py
src/services/message/: flows.py  models.py  service.py  views.py
src/services/notifications/: views.py
src/services/render/: flows.py
src/services/response/: flows.py  models.py  service.py
src/services/search/: models.py  service.py
src/services/users/: views.py
src/utils/: web_query.py
static/: close.html  login.html  signup.html  user_update.html
static/assets/css/: untitled.css
templates/en/: auth_not_available.j2  change_language.j2  expired.j2  internal_error.j2  login_200.j2  login_400.j2  login_401.j2  login_402.j2  login_422.j2  login_no.j2  login_start.j2  menu.j2  menu_accounting.j2  menu_orders.j2  menu_restarted.j2  missing_perms.j2  only_private.j2  order_close_201.j2  order_close_403.j2  order_close_422.j2  register_201.j2  register_400.j2  register_422.j2  register_start.j2  response_200.j2  response_201.j2  response_400.j2  response_403.j2  response_404.j2  response_409.j2  response_approve.j2  response_approved.j2  response_decline.j2  response_declined.j2  start.j2  user.j2  verify_no.j2  verify_request.j2  verify_request_404.j2  verifyed.j2
templates/order/: Classic Era (Vanilla)-cd.j2  Classic Era (Vanilla).j2  DF-cd.j2  EFT-cd.j2  WotLK-cd.j2  eta-price-gold.j2  eta-price.j2  order.j2  pre-eta-price.j2  pre-order.j2  response-check.j2  response-checked.j2  response.j2
templates/order/main/: order.j2
templates/ru/: auth_not_available.j2  change_language.j2  expired.j2  header.j2  internal_error.j2  login_200.j2  login_400.j2  login_401.j2  login_402.j2  login_422.j2  login_no.j2  login_start.j2  menu.j2  menu_accounting.j2  menu_orders.j2  menu_restarted.j2  missing_perms.j2  only_private.j2  order_close_201.j2  order_close_403.j2  order_close_422.j2  order_user.j2  register_201.j2  register_400.j2  register_422.j2  register_start.j2  response_200.j2  response_201.j2  response_400.j2  response_403.j2  response_404.j2  response_409.j2  response_approve.j2  response_approved.j2  response_decline.j2  response_declined.j2  start.j2  user.j2  verify.j2  verify_no.j2  (+3 more)
templates/system/: get_id.j2  notify_logged.j2  notify_order_close.j2  notify_order_deleted.j2  notify_order_edited.j2  notify_order_paid.j2  notify_order_sent.j2  notify_registered.j2  notify_response_chose.j2  notify_verify.j2  order.j2  order_close.j2  response_admins.j2  response_approve_200.j2  response_approve_403.j2  response_approve_404.j2  response_update_200.j2  response_update_400.j2  response_update_409.j2  update_user.j2  user.j2  verify_200.j2  verify_400.j2
