[tool.poetry]
name = "dude-duck-frontend"
version = "0.1.0"
description = ""
authors = ["CraazzzyyFoxx <craazzzyyfoxx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.0"
pydantic = {extras = ["email"], version = "^2.1.1"}
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
fastapi = "^0.103.1"
uvloop = {version = "^0.17.0", platform="linux"}
pydantic-settings = "^2.0.2"
aiogram = "^3.0.0"
aiogram-dialog = "^2.0.0"
httpx = "^0.25"
orjson = "^3.9.4"
babel = "^2.12.1"
pydantic-extra-types = "^2.0.0"
phonenumbers = "^8.13.18"
dateparser = "^1.1.8"
gunicorn = "^21.2.0"
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.287"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
