[tool.poetry]
name = "dude-duck-frontend"
version = "0.1.0"
description = ""
authors = ["CraazzzyyFoxx <craazzzyyfoxx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.0"
pydantic = {extras = ["email"], version = "^2.1.1"}
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
fastapi = "^0.103.1"
uvloop = {version = "^0.17.0", platform="linux"}
pydantic-settings = "^2.0.2"
aiogram = "^3.0.0"
aiogram-dialog = "^2.0.0"
httpx = "^0.25"
orjson = "^3.9.4"
babel = "^2.12.1"
pydantic-extra-types = "^2.0.0"
phonenumbers = "^8.13.18"
dateparser = "^1.1.8"
gunicorn = "^21.2.0"
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.287"
isort = "^5.12.0"

[tool.ruff]
line-length = 120

[mypy]
plugins = "pydantic.mypy"

follow_imports = "silent"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = "True"

[pydantic-mypy]
init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"

[tool.isort]
skip_glob = "**/__init__.pyi"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
